Security/04-RequestAuthn-and-AuthzPolicy/keycloak/istio/keycloak-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "keycloak.magedu.com"
