Security/04-RequestAuthn-and-AuthzPolicy/keycloak/istio/keycloak-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: keycloak
  namespace: keycloak
spec:
  host: keycloak
  trafficPolicy:
    tls:
      mode: DISABLE
---
