Security/04-RequestAuthn-and-AuthzPolicy/keycloak/istio/keycloak-virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  hosts:
  - "keycloak.magedu.com"
  gateways:
  - "keycloak-gateway"
  tls:
  - match:
    - port: 443
      sniHosts:
      - "keycloak.magedu.com"
    route:
    - destination:
        host: keycloak
        port:
          number: 443
---
